--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,6 @@
-# Database Configuration
-MONGODB_URI=mongodb+srv://yashodakalhara187_db_user:IWZYenptDNJYT4wC@moneyhandle.norjxgi.mongodb.net/?retryWrites=true&w=majority&appName=MoneyHandle
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_secure_2024
+MONGODB_URI=mongodb://localhost:27017/money-handle
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=7d
-
-# CORS Configuration
 CLIENT_URL=http://localhost:5173
+NODE_ENV=development
+PORT=5000
